#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-15
2014-02-16 David Schneider
- change default value for store_epics 
- add type_filter option 
- add ddl_Translator to generate ddl depedenent code

Tag: V00-00-14
2014-01-15 David Schneider
- fix bug with when scr_filter is initialized
- add unit test for writing Alias Config
- move codegen template from psddl package here

Tag: V00-00-13
2014-01-14 David Schneider
- use AliasMap to create h5 soft links for Pds::Src groups

Tag: V00-00-12
2014-01-14 David Schneider
- removing test xtc files from the data subdirectory.

Tag: V00-00-11
2014-01-13 David Schneider
- updating to work with PSEvt V00-08-00, new tag with Alias support.
  User should be able to use aliases in src filter list.
	
Tag: V00-00-10
2014-01-13 David Schneider
- using PSEvt::Source instead of string for user src filter list

Tag: V00-00-09
2014-01-09 David Schneider
- cleaning user key strings before making h5 group names.

Tag: V00-00-08
2014-01-08 David Schneider
- changing two type names to be backward compatible with o2o-translate.

Tag: V00-00-07
2014-01-06 David Schneider
- Regenerating backend from psddl V00-13-01.
- Updates Translator for ana-0.10.10

Tag: V00-00-06
2014-01-06 David Schneider
- Fixing bug with unit tests - one test depended on removed testing scripts.

Tag: V00-00-05
2013-12-20 David Schneider
- Finished testing - this version seems production ready.
- Removed testing scripts.

Tag: V00-00-04
2013-12-19 David Schneider
- Users can register new hdf writers for simple classes. 
- Changed filtered event handling - event key "do_not_translate" can be