@@ -99,6 +99,7 @@ L3T = include                  # Psana::L3T::ConfigV1, Psana::L3T::DataV1
 OceanOptics = include          # Psana::OceanOptics::ConfigV1, Psana::OceanOptics::DataV1
 Opal1k = include               # Psana::Opal1k::ConfigV1
 Orca = include                 # Psana::Orca::ConfigV1
+Partition = include            # Psana::Partition::ConfigV1
 PhaseCavity = include          # Psana::Bld::BldDataPhaseCavity
 PimImage = include             # Psana::Lusi::PimImageConfigV1
 Princeton = include            # Psana::Princeton::ConfigV1, Psana::Princeton::ConfigV2, Psana::Princeton::ConfigV3, Psana::Princeton::ConfigV4, Psana::Princeton::ConfigV5, Psana::Princeton::FrameV1, Psana::Princeton::FrameV2
